setup angular scripts with jade

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,5 +1,4 @@
-doctype
-html
-  head
-  body
-    h1 Hello World
+extends ../includes/layout
+block main-content
+  section.content
+    h1 hello world
