--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,7 +1,7 @@
 doctype
 html
   head
-    link(rel="stylesheet", href="/bootstrap/bootstrap.css")
+    link(rel="stylesheet", href="/vendor/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet", href="/vendor/toastr/toastr.css")
     link(rel="stylesheet", href="/css/site.css")
   body
