--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -4,6 +4,6 @@ html
     link(rel="stylesheet", href="/vendor/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet", href="/vendor/toastr/toastr.css")
     link(rel="stylesheet", href="/css/site.css")
-  body
+  body(ng-app="app")
     block main-content
     include scripts
