--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -3,3 +3,4 @@ script(src="/vendor/bootstrap/dist/js/bootstrap.js")
 script(src="/vendor/angular/angular.js")
 script(src="/vendor/angular-resource/angular-resource.js")
 script(src="/vendor/angular-route/angular-route.js")
+script(src="/app/app.js")
