creating the UI

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,5 +1,19 @@
 extends ../includes/layout
 block main-content
+  .navbar.navbar-inverse.navbar-fixed-top
+    .container
+      .navbar-header
+        .a.navbar-brand(href="/") BrandName
+          h6 Some text goes here
+      .navbar-collapse.collapse
+        ul.nav.navbar-nav
+          li
+            a(href="/") Home
+          li
+            a(href="/#") Link 2
   section.content
     div(ng-view)
   h2= mongoMessage
+
+  footer.container.text-center
+    p &copy: 2015 Company Name
