--- a/server/views/partials/main.jade
+++ b/server/views/partials/main.jade
@@ -1,2 +1,4 @@
-h1 This is a Partial
-h2 {{ message }}
+.container
+  .jumbotron
+    h1 Some website header
+    p Welcome to another website. Blah blah
