--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -13,7 +13,6 @@ block main-content
             a(href="/#") Link 2
   section.content
     div(ng-view)
-  h2= mongoMessage
 
   footer.container.text-center
-    p &copy: 2015 Company Name
+    p &copy; 2015 Company Name
