--- a/server/views/partials/main.jade
+++ b/server/views/partials/main.jade
@@ -2,3 +2,9 @@
   .jumbotron
     h1 Some website header
     p Welcome to another website. Blah blah
+
+  .row
+    .col-md-6
+      div(ng-include="'/partials/featured-course'")
+    .col-md-6
+      div(ng-include="'/partials/new-courses'")
