added dummy data

--- a/server/views/partials/featured-course.jade
+++ b/server/views/partials/featured-course.jade
@@ -1,3 +1,5 @@
 .panel.panel-primary
   .panel-heading.text-center Featured Courses
-  .pandel-body Body goes here
+  .pandel-body
+    .row(ng-repeat="course in courses | filter: {featured: true}")
+      .col-md-12 {{course.name}}
