--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -4,3 +4,4 @@ script(src="/vendor/angular/angular.js")
 script(src="/vendor/angular-resource/angular-resource.js")
 script(src="/vendor/angular-route/angular-route.js")
 script(src="/app/app.js")
+script(src="/app/main/mainCtrl.js")
