added username password input

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -9,8 +9,7 @@ block main-content
         ul.nav.navbar-nav
           li
             a(href="/") Home
-          li
-            a(href="/#") Link 2
+        div(ng-include="'/partials/navbar-login'")
   section.content
     div(ng-view)
 
