--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -5,3 +5,4 @@ script(src="/vendor/angular-resource/angular-resource.js")
 script(src="/vendor/angular-route/angular-route.js")
 script(src="/app/app.js")
 script(src="/app/main/mainCtrl.js")
+script(src="/app/account/navBarLoginCtrl.js")
