updated scripts to cdn

--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,8 +1,8 @@
 doctype
 html
   head
-    link(rel="stylesheet", href="/vendor/bootstrap/dist/css/bootstrap.css")
-    link(rel="stylesheet", href="/vendor/toastr/toastr.css")
+    link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+    link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.0/css/toastr.css")
     link(rel="stylesheet", href="/css/site.css")
   body(ng-app="app")
     block main-content
