--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -1,5 +1,5 @@
-script(src="/vendor/jquery/dist/jquery.js")
-script(src="/vendor/bootstrap/dist/js/bootstrap.js")
+script(src="//code.jquery.com/jquery-2.1.3.js")
+script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
 script(src="/vendor/angular/angular.js")
 script(src="/vendor/angular-resource/angular-resource.js")
 script(src="/vendor/angular-route/angular-route.js")
